Pull up following revision(s) (requested by christos in ticket #1464): 	sbin/gpt/gpt.c: revision 1.11 PR/43105: Peter Kerwien: Destroying a GPT partition with dd will cause gpt destroy / create to fail. When reading the GPT label from the end of the disk ignore errors if the GPT label at the beginning of the disk was not found.