sbin/gpt/gpt.c
@@ -31,7 +31,7 @@
 __FBSDID("$FreeBSD: src/sbin/gpt/gpt.c,v 1.16 2006/07/07 02:44:23 marcel Exp $");
 #endif
 #ifdef __RCSID
-__RCSID("$NetBSD: gpt.c,v 1.8 2008/02/24 18:38:10 christos Exp $");
+__RCSID("$NetBSD: gpt.c,v 1.8.6.1 2010/11/21 21:59:38 riz Exp $");
 #endif
 
 #include <sys/param.h>
@@ -560,7 +560,7 @@ out:
 #endif
 
 static int
-gpt_gpt(int fd, off_t lba)
+gpt_gpt(int fd, off_t lba, int found)
 {
 	uuid_t type;
 	off_t size;
@@ -593,8 +593,15 @@ gpt_gpt(int fd, off_t lba)
 
 	/* Use generic pointer to deal with hdr->hdr_entsz != sizeof(*ent). */
 	p = gpt_read(fd, le64toh(hdr->hdr_lba_table), blocks);
-	if (p == NULL)
-		return (-1);
+	if (p == NULL) {
+		if (found) {
+			if (verbose)
+				warn("%s: Cannot read LBA table at sector %llu",
+				    device_name, le64toh(hdr->hdr_lba_table));
+			return (-1);
+		}
+		goto fail_hdr;
+	}
 
 	if (crc32(p, tblsz) != le32toh(hdr->hdr_crc_table)) {
 		if (verbose)
@@ -619,7 +626,7 @@ gpt_gpt(int fd, off_t lba)
 		return (-1);
 
 	if (lba != 1)
-		return (0);
+		return (1);
 
 	for (i = 0; i < le32toh(hdr->hdr_entries); i++) {
 		ent = (void*)(p + i * le32toh(hdr->hdr_entsz));
@@ -643,7 +650,7 @@ gpt_gpt(int fd, off_t lba)
 			return (-1);
 		m->map_index = i + 1;
 	}
-	return (0);
+	return (1);
 
  fail_ent:
 	free(p);
@@ -657,7 +664,7 @@ int
 gpt_open(const char *dev)
 {
 	struct stat sb;
-	int fd, mode;
+	int fd, mode, found;
 
 	mode = readonly ? O_RDONLY : O_RDWR|O_EXCL;
 
@@ -723,9 +730,9 @@ gpt_open(const char *dev)
 
 	if (gpt_mbr(fd, 0LL) == -1)
 		goto close;
-	if (gpt_gpt(fd, 1LL) == -1)
+	if ((found = gpt_gpt(fd, 1LL, 1)) == -1)
 		goto close;
-	if (gpt_gpt(fd, mediasz / secsz - 1LL) == -1)
+	if (gpt_gpt(fd, mediasz / secsz - 1LL, found) == -1)
 		goto close;
 
 	return (fd);
